[gd_scene load_steps=4 format=3 uid="uid://731r7v4rempo"]

[ext_resource type="Theme" uid="uid://dvunoh38j5ne6" path="res://ui/base_theme.tres" id="1_bgk1d"]
[ext_resource type="Script" uid="uid://dqi642y7l0dk4" path="res://scripts/quad/individual_map_loader.gd" id="2_3hktv"]
[ext_resource type="Texture2D" uid="uid://cwo4kf3q5uoqx" path="res://assets/background_image/random_map.png" id="3_3hktv"]

[node name="IndividualMapLoader" type="HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(600, 300)
offset_right = 600.0
offset_bottom = 300.0
theme = ExtResource("1_bgk1d")
theme_override_constants/separation = 30
script = ExtResource("2_3hktv")

[node name="MapPreviewContainer" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
clip_contents = true
custom_minimum_size = Vector2(225, 300)
layout_mode = 2

[node name="MapPreview" type="TextureRect" parent="MapPreviewContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_3hktv")
expand_mode = 5
stretch_mode = 5

[node name="MapConfigContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(375, 0)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="MapConfigContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.662745, 0.662745, 0.662745, 1)
theme_override_font_sizes/font_size = 20
text = "MAP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MapNameContainer" type="HBoxContainer" parent="MapConfigContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MapConfigContainer/MapNameContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.662745, 0.662745, 0.662745, 1)
theme_override_font_sizes/font_size = 36
text = "  ["
horizontal_alignment = 1
vertical_alignment = 1

[node name="MapName" type="Label" parent="MapConfigContainer/MapNameContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "喵喵喵"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="MapConfigContainer/MapNameContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.662745, 0.662745, 0.662745, 1)
theme_override_font_sizes/font_size = 36
text = "]  "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="MapConfigContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label2" type="Label" parent="MapConfigContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.662745, 0.662745, 0.662745, 1)
theme_override_font_sizes/font_size = 20
text = "TEAMS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TeamNameContainer" type="HBoxContainer" parent="MapConfigContainer"]
layout_mode = 2
alignment = 1

[node name="Left" type="Label" parent="MapConfigContainer/TeamNameContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "Team 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Separator" type="Label" parent="MapConfigContainer/TeamNameContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = " - "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Right" type="Label" parent="MapConfigContainer/TeamNameContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "Team 2"
horizontal_alignment = 1
vertical_alignment = 1
